--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,14 @@
 	defaultBranch = main
 [credential "https://github.com"]
 	helper = 
-	helper = !/home/linuxbrew/.linuxbrew/Cellar/gh/2.23.0/bin/gh auth git-credential
+	helper = !/home/linuxbrew/.linuxbrew/Cellar/gh/2.27.0/bin/gh auth git-credential
 [credential "https://gist.github.com"]
 	helper = 
-	helper = !/home/linuxbrew/.linuxbrew/Cellar/gh/2.23.0/bin/gh auth git-credential
+	helper = !/home/linuxbrew/.linuxbrew/Cellar/gh/2.27.0/bin/gh auth git-credential
+
+[user]
+	name = Lir Locker
+	email = locker.lir@gmail.com
+
+[includeIf "hasconfig:remote.*.url:https://github.com/wiz-sec/**"]
+	path = ~/.gitconfig.work
